# quick_notes

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: main.cpp  maineditor.cpp  maineditor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
